[package]
name = "u5_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "i2c"
# path = "src/bin/i2c.rs"

[dependencies]
cortex-m = { version = "0.7.7" }
# u5-lib = {git = "ssh://gitea@git.ggeta.com:2002/guangzong/u5_new.git", features = ["utils"], rev= "c7bbfd1593"}
# u5-lib = {git = "ssh://git@github.com:22/chen-gz/stm32u5lib.git", features = ["utils"], rev="8fec3af"}
# u5-lib = { git = "https://github.com/chen-gz/stm32u5lib.git", features = [
u5-lib = { git = "https://github.com/chen-gz/stm32u5lib.git", features = [
    "utils",
    "stm32u575zi",
], branch = "dev", default-features = false }
#  u5-lib = { path = "../stm32u5lib", features = [
#      "utils",
#      # "stm32u5a5zj",
# #     "stm32u575zi",
#  ], default-features = false }


defmt = "0.3.6"
defmt-rtt = { version = "0.4.0" }
cortex-m-rt = { version = "0.7.3", default-features = false }

[dependencies.embassy-executor]
#features = ["nightly", "arch-cortex-m", "executor-thread"]
features = [ "arch-cortex-m", "executor-thread"]
git = "https://github.com/embassy-rs/embassy"
rev = "bcebe4c"
#rev = "32cff65"
# rev = "35f284e"
[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy"
rev = "32cff65"

# [dependencies.stm32-metapac]
# #path = "../stm32-data/build/stm32-metapac"
# git = "https://gitea.ggeta.com/guangzong/stm32-data-generated"
# features = ["rt"]
# rev = "a3820c27dc"

# disable all optimizations
[profile.dev]
opt-level = 1
debug = true

[features]
stm32u575zi = ["u5-lib/stm32u575zi"]
stm32u5a5zj = ["u5-lib/stm32u5a5zj"]
stm32u575ci = ["u5-lib/stm32u575ci"]
#default = ["stm32u5a5zj"]
default = ["stm32u575zi"]

[[bin]]
src = "src/bin/btn.rs"
name = "btn"
test = false
bench = false

[[bin]]
src = "src/bin/led_block.rs"
name = "led_block"
test = false
bench = false

[[bin]]
src = "src/bin/i2c.rs"
name = "i2c"
test = false
bench = false

[[bin]]
src = "src/bin/pwm.rs"
name = "pwm"
test = false
bench = false

[[bin]]
src = "src/bin/rtc.rs"
name = "rtc"
test = false
bench = false

[[bin]]
src = "src/bin/usart.rs"
name = "usart"
test = false
bench = false

[[bin]]
src = "src/bin/usb.rs"
name = "usb"
test = false
bench = false
